# nixxo.github.io

./: README.md
arcade/: index.html
arcade/common/: style.css  utils.js
arcade/memory/: index.html  script.js  style.css
arcade/running-duck/: index.html  script.js  style.css
arcade/space-invaders/: index.html  script.js  style.css
arcade/tris/: index.html  script.js  style.css
arcade/whack_a_bug/: index.html  script.js  style.css
calendar_tools/: calendar_common.py  motogp_calendar.py  pyproject.toml  wsbk_calendar.py
calendars/: 2022.md  README.md  WorldSBK_2023_calendar.ics  WorldSBK_filtered_2023_calendar.ics  WorldSSP_2023_calendar.ics  WorldSSP_filtered_2023_calendar.ics  index.md
calendars/2022/: README.md
calendars/2023/: README.md
calendars/2024/: README.md
calendars/2025/: README.md
motogp/: Moto2_2022_calendar.ics  Moto2_filtered_2022_calendar.ics  Moto3_2022_calendar.ics  Moto3_filtered_2022_calendar.ics  MotoE_2022_calendar.ics  MotoE_filtered_2022_calendar.ics  MotoGP_2022_calendar.ics  MotoGP_filtered_2022_calendar.ics  motogp_calendar.py
repo/: addons.xml  addons.xml.md5
repo/plugin.video.skyvideoitalia/: addon.xml  plugin.video.skyvideoitalia-0.0.2.zip.md5
wsbk/: R3 bLU cRU Cup_2022_calendar.ics  R3 bLU cRU Cup_filtered_2022_calendar.ics  WorldSBK_2022_calendar.ics  WorldSBK_filtered_2022_calendar.ics  WorldSSP300_2022_calendar.ics  WorldSSP300_filtered_2022_calendar.ics  WorldSSP_2022_calendar.ics  WorldSSP_filtered_2022_calendar.ics  wsbk_calendar.py
yt-dpl-test-pages/: gedidigital-iframes.html
(+119 files in other folders)
