[tool.poetry]
name = "calendar-tools"
version = "0.1.0"
description = ""
authors = ["nixxo <nixxo@protonmail.com>"]
readme = "README.md"
packages = [{include = "calendar_tools"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
bs4 = "^0.0.1"
ics = "^0.8.0-dev"
web-pdb = "^1.5.7"
var_dump = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
